@@ -2,6 +2,11 @@ package ru.nsu.datagen.dataGenerator.generators.unique.uniquegenerators;
 
 import java.io.FileWriter;
 import java.io.IOException;
+import java.math.BigDecimal;
+import java.math.BigInteger;
+import java.math.RoundingMode;
+import java.time.LocalTime;
+import java.time.ZoneId;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -9,8 +14,11 @@ import java.util.List;
 import java.util.Map;
 import java.util.Random;
 import java.util.Set;
-import java.util.stream.Collectors;
+import java.util.concurrent.TimeUnit;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 
+import com.github.javafaker.Faker;
 import ru.nsu.datagen.dataGenerator.model.ColumnMetadata;
 import ru.nsu.datagen.dataGenerator.generators.unique.UniqueKeyGenerator;
 
@@ -24,6 +32,7 @@ public class MarkovGenerator implements UniqueKeyGenerator {
     private final List<Double> ndistincts;
     private final List<String> types;
     private final Random random = new Random(System.currentTimeMillis());
+    private final Faker faker = new Faker(random);
 
     public MarkovGenerator(List<ColumnMetadata> columnsMetadata, int recordCount) {
             this.columns = new ArrayList<>();
@@ -33,7 +42,7 @@ public class MarkovGenerator implements UniqueKeyGenerator {
             this.types = new ArrayList<>();
             
             for (ColumnMetadata col : columnsMetadata) {
-                this.columns.add(new HashMap<>(col.getMvc()));
+                this.columns.add(col.getMvc());
                 this.names.add(col.getName());
                 this.recordSize.add(col.getAvgTupleSize());
                 this.ndistincts.add(col.getNdistinct());
@@ -77,20 +86,20 @@ public class MarkovGenerator implements UniqueKeyGenerator {
     
     public List<List<String>> generateUnique(int count, int maxAttemptsPerItem) {
         Set<List<String>> uniques = new HashSet<>();
-//        Set<String> uniques = new HashSet<>();
         List<List<String>> results = new ArrayList<>();
         int attempts = 0;
         int maxAttempts = count * maxAttemptsPerItem;
         
         // Фаза 1: Генерация из реальных данных
-        while (results.size() < count && attempts < maxAttempts) {
-            attempts++;
-            
-            List<String> seq = sampleOneWithUpdate(columns);
-            String checkSeq = String.join(",", seq);
-            if (uniques.add(seq)) {
-                results.add(seq);
-                decreaseProbabilities(columns, seq);
+        if (columns.stream().noneMatch(Map::isEmpty)) {
+            while (results.size() < count && attempts < maxAttempts) {
+                attempts++;
+
+                List<String> seq = sampleOneWithUpdate(columns);
+                if (uniques.add(seq)) {
+                    results.add(seq);
+                    decreaseProbabilities(columns, seq);
+                }
             }
         }
         
@@ -115,7 +124,6 @@ public class MarkovGenerator implements UniqueKeyGenerator {
                 attempts++;
                 
                 List<String> seq = sampleOneWithUpdate(columns);
-                String checkSeq = String.join(",", seq);
                 if (uniques.add(seq)) {
                     results.add(seq);
                     // Не уменьшаем вероятности в фазе 2 для равномерного использования пространства
@@ -148,7 +156,7 @@ public class MarkovGenerator implements UniqueKeyGenerator {
     private List<String> sampleOneWithUpdate(List<Map<String, Double>> workingCols) {
         List<String> seq = new ArrayList<>();
         
-        String token = weightedChoice(workingCols.getFirst());
+        String token = weightedChoice(workingCols.get(0));
         seq.add(token);
         
         for (int i = 1; i < ncols; i++) {
@@ -235,22 +243,90 @@ public class MarkovGenerator implements UniqueKeyGenerator {
      * Генерирует случайную строку заданной длины из цифр и букв
      */
     private String generateRandomString(int length, String type) {
+
         if (length <= 0) return "";
-        String chars;
-        int i = 0;
-        StringBuilder sb = new StringBuilder(length);
-        System.err.println(type);
-        if (type.equals("integer")) {
-            chars = "0123456789";
-            sb.append(chars.charAt(random.nextInt(1, chars.length())));
-            i++;
-        } else {
-            chars = "0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz";
+//        System.err.println(type);
+        switch (type) {
+            case "smallint", "smallserial":
+                return String.valueOf(random.nextInt(65536) - 32768);
+            case "integer", "serial":
+                return String.valueOf(random.nextInt());
+            case "bigint", "bigserial":
+                return String.valueOf(random.nextLong());
+            case "real":
+                return String.valueOf(random.nextFloat());
+            case "double precision":
+                return String.valueOf(random.nextDouble());
+            case "money":
+                return faker.commerce().price(0, 1000000).replace(",", ".");
+            case "bytea":
+                byte[] bytes = new byte[length];
+                random.nextBytes(bytes);
+                return "\\x" + java.util.HexFormat.of().formatHex(bytes);
+            case "timestamp", "timestamp without time zone":
+                return faker.date().past(3650, TimeUnit.DAYS).toInstant().atZone(ZoneId.systemDefault()).toLocalDate().toString();
+            case "timestamp with time zone":
+                return faker.date().past(365, TimeUnit.DAYS).toInstant().atZone(ZoneId.systemDefault())
+                        .withZoneSameInstant(ZoneId.of(ZoneId.getAvailableZoneIds().stream()
+                        .skip(random.nextInt(ZoneId.getAvailableZoneIds().size()))
+                        .findFirst().orElse("UTC"))).toString();
+            case "date":
+                return faker.date().past(365, TimeUnit.DAYS).toInstant().atZone(ZoneId.systemDefault()).toLocalDate().toString();
+            case "time", "time without time zone", "interval":
+                return LocalTime.of(
+                        random.nextInt(24),
+                        random.nextInt(60),
+                        random.nextInt(60)
+                ).toString();
+
+            case "boolean":
+                return random.nextBoolean() ? "t" : "f";
         }
-        while (i++ < length) {
+
+        StringBuilder sb = new StringBuilder(length);
+        if (type.toLowerCase().startsWith("numeric") || type.toLowerCase().startsWith("decimal")) {
+            Matcher matcher = Pattern.compile("(\\d+),\\s*(\\d+)")
+                    .matcher(type);
+            int precision = -1;
+            int scale = -1;
+
+            if (matcher.find()) {
+                precision = Integer.parseInt(matcher.group(1));
+                scale = Integer.parseInt(matcher.group(2));
+            } else {
+                matcher = Pattern.compile("(\\d+)")
+                        .matcher(type);
+                if (matcher.find()) {
+                    precision = Integer.parseInt(matcher.group(1));
+                    scale = 0;
+                }
+            }
+
+            if (precision > 0 && scale >= 0) {
+                int integerDigits = precision - scale;
+                if (integerDigits < 0) integerDigits = 0;
+
+                long maxBound = (long) Math.pow(10, integerDigits);
+                long minBound = -maxBound;
+
+                double randomDouble = faker.number().randomDouble(scale, minBound, maxBound);
+
+                BigDecimal randomNumeric = BigDecimal.valueOf(randomDouble)
+                        .setScale(scale, RoundingMode.HALF_UP);
+
+                return randomNumeric.toString();
+            }
+        }
+
+        if (type.toLowerCase().contains("char") || type.toLowerCase().contains("text")) {
+            String fakeText = faker.lorem().paragraph(1);
+            return fakeText.substring(0, Math.min(length, fakeText.length()));
+        }
+
+        String chars = "01234563456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz";
+        for (int i = 0; i < length; i++) {
             sb.append(chars.charAt(random.nextInt(chars.length())));
         }
-        
         return sb.toString();
     }
 }
